--- a/Voluntary_Carbon_Report.ipynb
+++ b/Voluntary_Carbon_Report.ipynb
@@ -13753,7 +13753,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -13767,7 +13767,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.16"
   },
   "toc": {
    "base_numbering": 1,
